--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Material de la Facultad</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Material de la Facultad</h1>
-    <ul>
-        <li><a href="1er_año/">1er Año</a></li>
-        <li><a href="2do_año/">2do Año</a></li>
-        <li><a href="3er_año/">3er Año</a></li>
-        <li><a href="4to_año/">4to Año</a></li>
-        <li><a href="5to_año/">5to Año</a></li>
-        <li><a href="Optativas/">Optativas</a></li>
-    </ul>
+    <header>
+        <h1>📚 Material de la Facultad</h1>
+    </header>
+
+    <main>
+        <ul class="menu">
+            <li><a href="1er_año/">1er Año</a></li>
+            <li><a href="2do_año/">2do Año</a></li>
+            <li><a href="3er_año/">3er Año</a></li>
+            <li><a href="4to_año/">4to Año</a></li>
+            <li><a href="5to_año/">5to Año</a></li>
+            <li><a href="Optativas/">Optativas</a></li>
+        </ul>
+    </main>
+
+    <footer>
+        <p>Hecho con ❤️ para la facu</p>
+    </footer>
 </body>
 </html>
+
