--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Material de la Facultad</title>
+    <title>Licenciatura en Física</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>📚 Material de la Facultad</h1>
+        <h1>Licenciatura en Física</h1>
     </header>
 
     <main>
@@ -20,10 +20,6 @@
             <li><a href="Optativas/">Optativas</a></li>
         </ul>
     </main>
-
-    <footer>
-        <p>Hecho con ❤️ para la facu</p>
-    </footer>
 </body>
 </html>
 
