--- a/Optativas/index.html
+++ b/Optativas/index.html
@@ -2,22 +2,21 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Licenciatura en Física</title>
+    <title>Optativas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Licenciatura en Física</h1>
+        <h1>Optativas</h1>
     </header>
 
     <main>
         <ul class="menu">
-            <li><a href="1er_año/">1er Año</a></li>
-            <li><a href="2do_año/">2do Año</a></li>
-            <li><a href="3er_año/">3er Año</a></li>
-            <li><a href="4to_año/">4to Año</a></li>
-            <li><a href="5to_año/">5to Año</a></li>
-            <li><a href="Optativas/">Optativas</a></li>
+            <li><a href="Aplicaciones Térmicas de la Energía Solar/">ATES</a></li>
+            <li><a href="Seminarios de Termodinámica Moderna">STM</a></li>
+            <li><a href="Óptica Nanométrica/">Óptica Nanométrica</a></li>
+            <li><a href="Teoría Cualitativa de Ecuaciones Diferenciales">TCED</a></li>
+            <li><a href="______________">__</a></li>
         </ul>
     </main>
 </body>
