--- a/Optativas/index.html
+++ b/Optativas/index.html
@@ -12,10 +12,10 @@
 
     <main>
         <ul class="menu">
-            <li><a href="Aplicaciones Térmicas de la Energía Solar/">ATES</a></li>
-            <li><a href="Seminarios de Termodinámica Moderna">STM</a></li>
-            <li><a href="Óptica Nanométrica/">Óptica Nanométrica</a></li>
-            <li><a href="Teoría Cualitativa de Ecuaciones Diferenciales">TCED</a></li>
+            <li><a href="ATES">Aplicaciones Térmicas de la Energía Solar</a></li>
+            <li><a href="STM">Seminarios de Termodinámica Moderna</a></li>
+            <li><a href="ON">Óptica Nanométrica</a></li>
+            <li><a href="TCED">Teoría Cualitativa de Ecuaciones Diferenciales</a></li>
             <li><a href="______________">__</a></li>
         </ul>
     </main>
